tdf#144616 PPTX import: fix hyperlinks on shapes

Follow-up to commit 6e200689eb309cdbe1e4f08311a400835de19bfb
"tdf#141704 PPTX import: fix hyperlinks on images"

Change-Id: Ie9f1ba56d03462bb8d7ab376e23c89c921a8bcd6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122610
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>